--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,28 +1,29 @@
 [versions]
-agp = "8.2.2"
-kotlin = "1.8.21"
-core-ktx = "1.9.0"
+agp = "8.7.0"
+kotlin = "2.0.0"
+core-ktx = "1.13.1"
 junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
-appcompat = "1.6.1"
-material = "1.9.0"
+androidx-test-ext-junit = "1.2.1"
+espresso-core = "3.6.1"
+appcompat = "1.7.0"
+kotlinStdlibJdk8 = "2.0.21"
+material = "1.12.0"
 constraintlayout = "2.1.4"
-lifecycle-livedata-ktx = "2.6.1"
-lifecycle-viewmodel-ktx = "2.6.1"
-navigation-fragment-ktx = "2.6.0"
-navigation-ui-ktx = "2.6.0"
-coil = "2.4.0"
-gson = "2.10"
-okhttp = "4.10.0"
-retrofit = "2.9.0"
+lifecycle-livedata-ktx = "2.8.6"
+lifecycle-viewmodel-ktx = "2.8.6"
+navigation-fragment-ktx = "2.8.2"
+navigation-ui-ktx = "2.8.2"
+coil = "2.7.0"
+gson = "2.11.0"
+okhttp = "4.12.0"
+retrofit = "2.11.0"
 swiperefreshlayout = "1.1.0"
 datastore-core = "1.0.0"
-kotlinSerialization = "1.5.31"
-serializationJson = "1.2.2"
-androidXDatastore = "1.0.0"
-kotlinx-coroutines-rx2 = "1.7.3"
-dagger = "2.48"
+kotlinSerialization = "2.0.21"
+serializationJson = "1.7.3"
+androidXDatastore = "1.1.1"
+kotlinx-coroutines-rx2 = "1.9.0"
+dagger = "2.51.1"
 
 
 [libraries]
@@ -31,6 +32,7 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+kotlin-stdlib-jdk8 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlinStdlibJdk8" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycle-livedata-ktx" }
